# handwritten-text-recognition

./: pyproject.toml  requirements.txt
src/: main.py
src/data/: generator.py  reader.py
src/network/: model.py
